@@ -257,3 +257,4 @@ v1.5.1
  * forth: renamed load => included
  * forth: added include (e.g. "include gfx" loads gfx module)
  * forth: added marker
+ * forth: made dump work in decimal mode (thx kevin reno)
